# ASMR_Pro_Cutter

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  gui.py  main.py  pyproject.toml  requirements.txt  start.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
